# Friendly-Cotton-Genomes-Toolkit

./: .gitignore  HELP.md  README.md  babel.cfg  build.bat  build.ps1  build.sh  build_mac.sh  cli_runner.py  config.yml  genome_sources_list.yml  gui_app.py  main.cmd  main.py  pixi.toml  pyproject.toml  requirements.txt  setup.py  ui_settings.json
ai_processed_results/全部注释.csv_analyze/: 全部注释_全部注释.csv_analyze_processed.csv
cotton_toolkit/: __init__.py  cli.py  cotton_toolkit.pot  pipelines.py  tools_pipeline.py
cotton_toolkit/casestudies/: bsa_hvg_integration.py
cotton_toolkit/config/: compatibility_check.py  loader.py  models.py
cotton_toolkit/core/: ai_wrapper.py  convertFiles2sqlite.py  convertXlsx2csv.py  data_access.py  downloader.py  file_normalizer.py  gff_parser.py  homology_mapper.py  merged_output.csv  output_default_header.csv  test_data.xlsx
cotton_toolkit/external_functions/: __init__.py  phylogenetics.py  sequence_evolution.py
cotton_toolkit/locales/: cotton_toolkit.pot  pixi.toml  translator.py
cotton_toolkit/locales/en/LC_MESSAGES/: cotton_toolkit.mo  cotton_toolkit.po
cotton_toolkit/locales/ja/LC_MESSAGES/: cotton_toolkit.mo  cotton_toolkit.po
cotton_toolkit/locales/zh-hans/LC_MESSAGES/: cotton_toolkit.mo  cotton_toolkit.po  zh-hans.mo  zh-hans.po
cotton_toolkit/locales/zh-hant/: cotton_toolkit.mo  cotton_toolkit.po
cotton_toolkit/locales/zh-hant/LC_MESSAGES/: cotton_toolkit.mo  cotton_toolkit.po
cotton_toolkit/pipeline_integration_test_data_v2/: cottonA_test_v2.gff3  dummy_config.yml  dummy_genome_sources.yml  hom_A_At_test_v2.csv  hom_At_B_test_v2.csv  integration_input_v2.xlsx
cotton_toolkit/pipelines/: __init__.py  ai_tasks.py  analysis.py  annotation.py  blast.py  decorators.py  gff_tasks.py  homology.py  mapping.py  phylogenetics.py  preprocessing.py  quantification.py  seqence_query.py  sequence_analysis.py  sequence_query.py
cotton_toolkit/tools/: annotator.py  arabidopsis_analyzer.py  batch_ai_processor.py  bsa_analyzer.py  data_loader.py  enrichment_analyzer.py  fa_loader.py  visualizer.py  visualizer_for_enrichment.py
cotton_toolkit/utils/: advanced_tools_test.py  config_overrides_utils.py  file_utils.py  gene_utils.py  localization.py  logger.py  network_utils.py  tool_validator.py
docs/: HELP.md  HELP_en.md  HELP_ja.md  HELP_zh-hant.md  README_en.md  README_ja.md  README_zh-hant.md
ui/: __init__.py  dialogs.py  event_handler.py  gui_app.py  ui_manager.py
ui/tabs/: __init__.py  ai_assistant_tab.py  annotation_tab.py  arabidopsis_homology_tab.py  base_tab.py  blast_tab.py  data_download_tab.py  enrichment_tab.py  genome_identifier_tab.py  gff_query_tab.py  homology_tab.py  locus_conversion_tab.py  online_tools_tab.py  phylogenetics_tab.py  quantification_tab.py  sequence_analysis_tab.py  sequence_extraction_tab.py  xlsx_converter_tab.py
ui/utils/: gui_helpers.py
ui/workflows/: phylogenetics_workflow.py  sequence_evolution_workflow.py
