# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "cotton-toolkit"
version = "0.0.1" # 您可以根据需要更新版本号
authors = [
    { name = "<您的名字>", email = "gkoishi0514@gmail.com" },
]
description = "一个用于棉花基因组分析和数据整合的图形化工具包"
readme = "README.md"
requires-python = ">=3.8"

license = "Apache-2.0"          # 使用标准的 SPDX 许可证标识符
license-files = ["LICENSE"]     # 指向包含完整许可证文本的文件

keywords = ["bioinformatics", "cotton", "genomics", "bsa", "hvg", "gui"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    # "License :: OSI Approved :: Apache Software License", # 这一行可以被上面的 license 字段取代，可以移除
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Environment :: Win32 (MS Windows)",
    "Natural Language :: Chinese (Simplified)",
]

dependencies = [
    "pandas>=1.3",
    "PyYAML>=6.0",
    "requests>=2.20",
    "tqdm>=4.60",
    "gffutils>=0.10",
    "openpyxl>=3.0",
    "customtkinter>=5.2.0",
    "numpy>=1.20",
]


[project.urls]
# "Homepage" = "https://github.com/<your-username>/CottonToolkit"
# "Bug Tracker" = "https://github.com/<your-username>/CottonToolkit/issues"


[project.scripts]
cotton-toolkit = "cotton_toolkit.cli:cli_main_entry"


[project.gui-scripts]
cotton-toolkit-gui = "main:main"


[tool.setuptools]
packages = ["cotton_toolkit"]