[project]
name = "friendly-cotton-genomes-toolkit"
version = "1.0.0"
authors = [
  { name="Liu Junchen", email="gkoishi0514@gmail.com" },
]
description = "A modern toolkit for cotton genomics research."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pydantic~=2.11.7",
    "requests~=2.32.3",
    "tqdm~=4.67.1",
    "gffutils~=0.13",
    "pandas~=2.2.3",
    "pyyaml~=6.0.2",
    "numpy~=2.0.1",
    "pillow~=10.4.0",
    "diskcache~=5.6.3",
    "click~=8.1.8",
    "matplotlib~=3.10.3",
    "statsmodels~=0.14.4",
    "protobuf~=5.29.5",
    "openpyxl~=3.1.5",
    "networkx~=3.5",
    "upsetplot~=0.9.0",
    "ttkbootstrap~=1.13.12",
    "scipy~=1.16.0",
]

[project.urls]
"Homepage" = "https://github.com/PureAmaya/Friendly-Cotton-Genomes-Toolkit"

[project.scripts]
fcgt = "cotton_toolkit.cli:cli"

[tool.setuptools]
packages = ["cotton_toolkit"]

[tool.setuptools.package-data]
"cotton_toolkit" = ["locales/*/LC_MESSAGES/*.mo"]